fix(editor): allow horizontal scroll

--- a/src/styles/sandpack.css
+++ b/src/styles/sandpack.css
@@ -199,8 +199,7 @@ html.dark .sp-wrapper {
   background: var(--sp-colors-surface1);
 }
 
-.sandpack .sp-code-editor .cm-editor,
-.sandpack .sp-code-editor .cm-editor .cm-gutters {
+.sandpack .sp-code-editor .cm-editor {
   background-color: transparent;
 }
 
@@ -262,8 +261,6 @@ html.dark .sp-wrapper {
 }
 
 .sp-code-editor .sp-cm .cm-scroller {
-  overflow-x: hidden;
-  overflow-y: auto;
   padding-top: 18px;
 }
 
